--- a/PE04-Cities/cities/src/App.css
+++ b/PE04-Cities/cities/src/App.css
@@ -3,11 +3,11 @@ body {
   font-family: 'Helvetica Neue', Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #FFFFFF;
+  background-color: #91ea13;
   color: #b30d0d;
 }
 .container {
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 20px;
 }
@@ -25,7 +25,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #24abc9;
+  background-color: #a1abad;
   color: #22a9ec;
 }
 .add-city-form {
